--- a/head/settings_custom.tex
+++ b/head/settings_custom.tex
@@ -80,6 +80,10 @@
 \newcommand{\infnorm}[1]{\left\| #1 \right\|_\infty}
 \newcommand{\onenorm}[1]{\left\| #1 \right\|_1}
 
+\DeclareMathOperator*{\argmin}{\arg\,\min}  % rbp
+\DeclareMathOperator*{\arginf}{\arg\,\inf}  % rbp
+
+
 
 
 \usepackage{dsfont}
