--- a/tail/bibliography.bib
+++ b/tail/bibliography.bib
@@ -92,6 +92,27 @@
 	year={2006}
 }
 
+@inproceedings{scholkopf2001generalized,
+	title={A generalized representer theorem},
+	author={Sch{\"o}lkopf, Bernhard and Herbrich, Ralf and Smola, Alex J},
+	booktitle={International conference on computational learning theory},
+	pages={416--426},
+	year={2001},
+	organization={Springer}
+}
+
+@article{kimeldorf1971some,
+	title={Some results on Tchebycheffian spline functions},
+	author={Kimeldorf, George and Wahba, Grace},
+	journal={Journal of mathematical analysis and applications},
+	volume={33},
+	number={1},
+	pages={82--95},
+	year={1971},
+	publisher={Elsevier}
+}
+
+
 @inproceedings{kidger2020universal,
 	title={Universal approximation with deep narrow networks},
 	author={Kidger, Patrick and Lyons, Terry},
@@ -119,6 +140,14 @@
 	year={2011},
 	publisher={Springer Science \& Business Media}
 }
+
+@article{kanagawa2018gaussian,
+	title={{Gaussian processes and kernel methods: A review on connections and equivalences}},
+	author={Kanagawa, Motonobu and Hennig, Philipp and Sejdinovic, Dino and Sriperumbudur, Bharath K},
+	journal={arXiv preprint arXiv:1807.02582},
+	year={2018}
+}
+
 
 @article{sejdinovic2012rkhs,
 	title={What is an {RKHS?}},
